--- a/lab5/validator_rn/package.json
+++ b/lab5/validator_rn/package.json
@@ -26,12 +26,14 @@
   "dependencies": {
     "expo": "~52.0.46",
     "expo-status-bar": "~2.0.1",
+    "jest-expo": "~52.0.6",
     "react": "18.3.1",
-    "react-native": "0.76.9",
-    "jest-expo": "~52.0.6"
+    "react-native": "0.76.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^11.5.0",
+    "react-test-renderer": "^18.3.1"
   },
   "private": true
 }
